samples/_failures_safe/1761319064_496410_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d626e52.c: In function ‘main’:
./samples/SAFE/__tmp_2d626e52.c:176:9: error: expected declaration or statement at end of input
  176 |         printf("\nResult of multiplication:\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2d626e52.c:176:9: error: expected declaration or statement at end of input
